test/fixtures/type-error/noOverload.ro
type i32
type f32

private fun x(): i32 = 1
private fun x(a: i32): i32 = 1

fun test(a: f32): i32 = x(a)
